Refactor to virtual thread executors